--- a/Results/Review/Table3.tex
+++ b/Results/Review/Table3.tex
@@ -1,116 +1,137 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{4}{c}}
+\begin{tabular}{l*{12}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}\\
-            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}&\multicolumn{1}{c}{(10)}&\multicolumn{1}{c}{(11)}&\multicolumn{1}{c}{(12)}\\
+            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-efw\_colonizer&       0.716\sym{***}&       0.521\sym{**} &       1.135\sym{**} &       0.783\sym{**} \\
-            &     (0.153)         &     (0.206)         &     (0.325)         &     (0.204)         \\
+efw\_colonizer&       0.716\sym{***}&       0.751         &       1.199\sym{***}&       1.199\sym{***}&       1.199\sym{***}&       1.199\sym{***}&       1.199\sym{***}&       1.199\sym{***}&       0.716\sym{***}&       0.751         &       1.199\sym{***}&       1.648\sym{***}\\
+            &     (0.153)         &     (0.558)         &     (0.176)         &     (0.176)         &     (0.176)         &     (0.176)         &     (0.176)         &     (0.176)         &     (0.153)         &     (0.558)         &     (0.176)         &     (0.206)         \\
 [1em]
-america     &                     &      0.0338         &      -0.427         &     -0.0669         \\
-            &                     &     (0.125)         &     (0.886)         &     (1.349)         \\
+america     &                     &       0.158         &      -0.595         &      -0.595         &      -0.595         &      -0.595         &      -0.595         &      -0.595         &                     &       0.158         &      -0.595         &       0.242         \\
+            &                     &     (0.154)         &     (1.052)         &     (1.052)         &     (1.052)         &     (1.052)         &     (1.052)         &     (1.052)         &                     &     (0.154)         &     (1.052)         &     (1.667)         \\
 [1em]
-africa      &                     &      -0.327         &      -0.168         &       0.502         \\
-            &                     &     (0.273)         &     (1.045)         &     (1.883)         \\
+africa      &                     &      -0.113         &      -0.532         &      -0.532         &      -0.532         &      -0.532         &      -0.532         &      -0.532         &                     &      -0.113         &      -0.532         &       1.022         \\
+            &                     &     (0.237)         &     (1.083)         &     (1.083)         &     (1.083)         &     (1.083)         &     (1.083)         &     (1.083)         &                     &     (0.237)         &     (1.083)         &     (2.297)         \\
 [1em]
-asia        &                     &      -0.137         &      -0.858         &      -0.233         \\
-            &                     &     (0.110)         &     (1.188)         &     (1.786)         \\
+asia        &                     &      -0.109         &      -1.021         &      -1.021         &      -1.021         &      -1.021         &      -1.021         &      -1.021         &                     &      -0.109         &      -1.021         &      0.0103         \\
+            &                     &     (0.105)         &     (1.243)         &     (1.243)         &     (1.243)         &     (1.243)         &     (1.243)         &     (1.243)         &                     &     (0.105)         &     (1.243)         &     (2.070)         \\
 [1em]
-lat\_abst    &                     &       1.082\sym{*}  &      -4.681\sym{*}  &      -2.901         \\
-            &                     &     (0.489)         &     (1.903)         &     (1.559)         \\
+lat\_abst    &                     &       1.328         &      -5.296\sym{***}&      -5.296\sym{***}&      -5.296\sym{***}&      -5.296\sym{***}&      -5.296\sym{***}&      -5.296\sym{***}&                     &       1.328         &      -5.296\sym{***}&      -2.267         \\
+            &                     &     (0.713)         &     (0.709)         &     (0.709)         &     (0.709)         &     (0.709)         &     (0.709)         &     (0.709)         &                     &     (0.713)         &     (0.709)         &     (1.227)         \\
 [1em]
-landlock    &                     &       0.339         &       0.644\sym{*}  &       0.867\sym{*}  \\
-            &                     &     (0.292)         &     (0.283)         &     (0.370)         \\
+landlock    &                     &       0.412         &       0.782\sym{**} &       0.782\sym{**} &       0.782\sym{**} &       0.782\sym{**} &       0.782\sym{**} &       0.782\sym{**} &                     &       0.412         &       0.782\sym{**} &       1.134\sym{**} \\
+            &                     &     (0.343)         &     (0.217)         &     (0.217)         &     (0.217)         &     (0.217)         &     (0.217)         &     (0.217)         &                     &     (0.343)         &     (0.217)         &     (0.334)         \\
 [1em]
-island      &                     &       0.959\sym{***}&       1.412\sym{**} &       1.319\sym{***}\\
-            &                     &     (0.219)         &     (0.346)         &     (0.253)         \\
+island      &                     &       1.013\sym{***}&       1.562\sym{***}&       1.562\sym{***}&       1.562\sym{***}&       1.562\sym{***}&       1.562\sym{***}&       1.562\sym{***}&                     &       1.013\sym{***}&       1.562\sym{***}&       1.565\sym{***}\\
+            &                     &     (0.213)         &     (0.255)         &     (0.255)         &     (0.255)         &     (0.255)         &     (0.255)         &     (0.255)         &                     &     (0.213)         &     (0.255)         &     (0.197)         \\
 [1em]
-ruggedness  &                     &                     &    0.000129         &     0.00109         \\
-            &                     &                     &   (0.00103)         &   (0.00186)         \\
+2.colonizer &                     &           0         &           0         &           0         &           0         &           0         &           0         &           0         &                     &           0         &           0         &           0         \\
+            &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &                     &         (.)         &         (.)         &         (.)         \\
 [1em]
-logem4      &                     &                     &      -0.162         &      -0.220\sym{**} \\
-            &                     &                     &     (0.113)         &    (0.0520)         \\
+3.colonizer &                     &     -0.0524         &      -0.243         &      -0.243         &      -0.243         &      -0.243         &      -0.243         &      -0.243         &                     &     -0.0524         &      -0.243         &       0.997\sym{*}  \\
+            &                     &     (0.342)         &     (0.333)         &     (0.333)         &     (0.333)         &     (0.333)         &     (0.333)         &     (0.333)         &                     &     (0.342)         &     (0.333)         &     (0.439)         \\
 [1em]
-lpd1500s    &                     &                     &     -0.0880         &     -0.0661         \\
-            &                     &                     &     (0.169)         &     (0.233)         \\
+4.colonizer &                     &       0.301\sym{**} &       0.486         &       0.486         &       0.486         &       0.486         &       0.486         &       0.486         &                     &       0.301\sym{**} &       0.486         &       1.437         \\
+            &                     &    (0.0913)         &     (0.605)         &     (0.605)         &     (0.605)         &     (0.605)         &     (0.605)         &     (0.605)         &                     &    (0.0913)         &     (0.605)         &     (0.712)         \\
 [1em]
-humid1      &                     &                     &     -0.0115         &    -0.00420         \\
-            &                     &                     &    (0.0158)         &    (0.0294)         \\
+5.colonizer &                     &      -0.573         &                     &                     &                     &                     &                     &                     &                     &      -0.573         &                     &                     \\
+            &                     &     (0.907)         &                     &                     &                     &                     &                     &                     &                     &     (0.907)         &                     &                     \\
 [1em]
-humid2      &                     &                     &      0.0470\sym{*}  &      0.0449         \\
-            &                     &                     &    (0.0198)         &    (0.0285)         \\
+6.colonizer &                     &      -0.197\sym{**} &      -0.871\sym{**} &      -0.871\sym{**} &      -0.871\sym{**} &      -0.871\sym{**} &      -0.871\sym{**} &      -0.871\sym{**} &                     &      -0.197\sym{**} &      -0.871\sym{**} &       0.469         \\
+            &                     &    (0.0791)         &     (0.237)         &     (0.237)         &     (0.237)         &     (0.237)         &     (0.237)         &     (0.237)         &                     &    (0.0791)         &     (0.237)         &     (0.578)         \\
 [1em]
-humid3      &                     &                     &      0.0327         &      0.0309         \\
-            &                     &                     &    (0.0182)         &    (0.0228)         \\
+7.colonizer &                     &       0.499         &       0.175         &       0.175         &       0.175         &       0.175         &       0.175         &       0.175         &                     &       0.499         &       0.175         &       1.598\sym{***}\\
+            &                     &     (0.794)         &     (0.563)         &     (0.563)         &     (0.563)         &     (0.563)         &     (0.563)         &     (0.563)         &                     &     (0.794)         &     (0.563)         &     (0.271)         \\
 [1em]
-humid4      &                     &                     &    -0.00161         &     0.00977         \\
-            &                     &                     &    (0.0105)         &    (0.0166)         \\
+8.colonizer &                     &       1.999\sym{*}  &                     &                     &                     &                     &                     &                     &                     &       1.999\sym{*}  &                     &                     \\
+            &                     &     (0.964)         &                     &                     &                     &                     &                     &                     &                     &     (0.964)         &                     &                     \\
 [1em]
-temp1       &                     &                     &      -0.163         &      -0.237         \\
-            &                     &                     &     (0.134)         &     (0.120)         \\
+ruggedness  &                     &                     &   -0.000917         &   -0.000917         &   -0.000917         &   -0.000917         &   -0.000917         &   -0.000917         &                     &                     &   -0.000917         &    0.000340         \\
+            &                     &                     &   (0.00154)         &   (0.00154)         &   (0.00154)         &   (0.00154)         &   (0.00154)         &   (0.00154)         &                     &                     &   (0.00154)         &   (0.00231)         \\
 [1em]
-temp2       &                     &                     &     -0.0964\sym{***}&     -0.0598         \\
-            &                     &                     &    (0.0203)         &    (0.0499)         \\
+logem4      &                     &                     &      -0.164         &      -0.164         &      -0.164         &      -0.164         &      -0.164         &      -0.164         &                     &                     &      -0.164         &      -0.388\sym{***}\\
+            &                     &                     &     (0.164)         &     (0.164)         &     (0.164)         &     (0.164)         &     (0.164)         &     (0.164)         &                     &                     &     (0.164)         &    (0.0592)         \\
 [1em]
-temp3       &                     &                     &       0.176\sym{*}  &       0.193\sym{***}\\
-            &                     &                     &    (0.0671)         &    (0.0405)         \\
+lpd1500s    &                     &                     &     -0.0582         &     -0.0582         &     -0.0582         &     -0.0582         &     -0.0582         &     -0.0582         &                     &                     &     -0.0582         &    0.000869         \\
+            &                     &                     &     (0.211)         &     (0.211)         &     (0.211)         &     (0.211)         &     (0.211)         &     (0.211)         &                     &                     &     (0.211)         &     (0.295)         \\
 [1em]
-temp4       &                     &                     &     -0.0238         &     0.00761         \\
-            &                     &                     &    (0.0113)         &    (0.0240)         \\
+humid1      &                     &                     &     -0.0135         &     -0.0135         &     -0.0135         &     -0.0135         &     -0.0135         &     -0.0135         &                     &                     &     -0.0135         &    -0.00682         \\
+            &                     &                     &    (0.0128)         &    (0.0128)         &    (0.0128)         &    (0.0128)         &    (0.0128)         &    (0.0128)         &                     &                     &    (0.0128)         &    (0.0282)         \\
 [1em]
-temp5       &                     &                     &      0.0839         &      0.0920         \\
-            &                     &                     &    (0.0415)         &    (0.0626)         \\
+humid2      &                     &                     &      0.0626\sym{***}&      0.0626\sym{***}&      0.0626\sym{***}&      0.0626\sym{***}&      0.0626\sym{***}&      0.0626\sym{***}&                     &                     &      0.0626\sym{***}&      0.0631\sym{*}  \\
+            &                     &                     &   (0.00488)         &   (0.00488)         &   (0.00488)         &   (0.00488)         &   (0.00488)         &   (0.00488)         &                     &                     &   (0.00488)         &    (0.0274)         \\
 [1em]
-steplow     &                     &                     &      0.0141         &      -0.123         \\
-            &                     &                     &     (0.149)         &     (0.279)         \\
+humid3      &                     &                     &      0.0404         &      0.0404         &      0.0404         &      0.0404         &      0.0404         &      0.0404         &                     &                     &      0.0404         &      0.0397         \\
+            &                     &                     &    (0.0195)         &    (0.0195)         &    (0.0195)         &    (0.0195)         &    (0.0195)         &    (0.0195)         &                     &                     &    (0.0195)         &    (0.0272)         \\
 [1em]
-deslow      &                     &                     &     -0.0437         &       0.109         \\
-            &                     &                     &     (0.355)         &     (0.296)         \\
+humid4      &                     &                     &   -0.000376         &   -0.000376         &   -0.000376         &   -0.000376         &   -0.000376         &   -0.000376         &                     &                     &   -0.000376         &      0.0198         \\
+            &                     &                     &    (0.0135)         &    (0.0135)         &    (0.0135)         &    (0.0135)         &    (0.0135)         &    (0.0135)         &                     &                     &    (0.0135)         &    (0.0170)         \\
 [1em]
-stepmid     &                     &                     &           0         &           0         \\
-            &                     &                     &         (.)         &         (.)         \\
+temp1       &                     &                     &      -0.203\sym{*}  &      -0.203\sym{*}  &      -0.203\sym{*}  &      -0.203\sym{*}  &      -0.203\sym{*}  &      -0.203\sym{*}  &                     &                     &      -0.203\sym{*}  &      -0.284\sym{*}  \\
+            &                     &                     &    (0.0920)         &    (0.0920)         &    (0.0920)         &    (0.0920)         &    (0.0920)         &    (0.0920)         &                     &                     &    (0.0920)         &     (0.110)         \\
 [1em]
-desmid      &                     &                     &           0         &           0         \\
-            &                     &                     &         (.)         &         (.)         \\
+temp2       &                     &                     &     -0.0946\sym{**} &     -0.0946\sym{**} &     -0.0946\sym{**} &     -0.0946\sym{**} &     -0.0946\sym{**} &     -0.0946\sym{**} &                     &                     &     -0.0946\sym{**} &     -0.0312         \\
+            &                     &                     &    (0.0301)         &    (0.0301)         &    (0.0301)         &    (0.0301)         &    (0.0301)         &    (0.0301)         &                     &                     &    (0.0301)         &    (0.0321)         \\
 [1em]
-drystep     &                     &                     &     -0.0923         &      -0.151\sym{**} \\
-            &                     &                     &     (0.127)         &    (0.0415)         \\
+temp3       &                     &                     &       0.234\sym{**} &       0.234\sym{**} &       0.234\sym{**} &       0.234\sym{**} &       0.234\sym{**} &       0.234\sym{**} &                     &                     &       0.234\sym{**} &       0.233\sym{***}\\
+            &                     &                     &    (0.0527)         &    (0.0527)         &    (0.0527)         &    (0.0527)         &    (0.0527)         &    (0.0527)         &                     &                     &    (0.0527)         &    (0.0501)         \\
 [1em]
-hiland      &                     &                     &           0         &           0         \\
-            &                     &                     &         (.)         &         (.)         \\
+temp4       &                     &                     &     -0.0103         &     -0.0103         &     -0.0103         &     -0.0103         &     -0.0103         &     -0.0103         &                     &                     &     -0.0103         &     0.00826         \\
+            &                     &                     &   (0.00612)         &   (0.00612)         &   (0.00612)         &   (0.00612)         &   (0.00612)         &   (0.00612)         &                     &                     &   (0.00612)         &    (0.0326)         \\
 [1em]
-drywint     &                     &                     &           0         &           0         \\
-            &                     &                     &         (.)         &         (.)         \\
+temp5       &                     &                     &      0.0753\sym{*}  &      0.0753\sym{*}  &      0.0753\sym{*}  &      0.0753\sym{*}  &      0.0753\sym{*}  &      0.0753\sym{*}  &                     &                     &      0.0753\sym{*}  &       0.116         \\
+            &                     &                     &    (0.0298)         &    (0.0298)         &    (0.0298)         &    (0.0298)         &    (0.0298)         &    (0.0298)         &                     &                     &    (0.0298)         &    (0.0597)         \\
 [1em]
-goldm       &                     &                     &    -0.00129         &     -0.0168         \\
-            &                     &                     &    (0.0174)         &    (0.0370)         \\
+steplow     &                     &                     &       0.101         &       0.101         &       0.101         &       0.101         &       0.101         &       0.101         &                     &                     &       0.101         &      0.0701         \\
+            &                     &                     &     (0.249)         &     (0.249)         &     (0.249)         &     (0.249)         &     (0.249)         &     (0.249)         &                     &                     &     (0.249)         &     (0.313)         \\
 [1em]
-iron        &                     &                     &      -0.141         &     -0.0245         \\
-            &                     &                     &     (0.211)         &     (0.327)         \\
+deslow      &                     &                     &       0.104         &       0.104         &       0.104         &       0.104         &       0.104         &       0.104         &                     &                     &       0.104         &       0.425         \\
+            &                     &                     &     (0.511)         &     (0.511)         &     (0.511)         &     (0.511)         &     (0.511)         &     (0.511)         &                     &                     &     (0.511)         &     (0.289)         \\
 [1em]
-silv        &                     &                     &     -0.0553         &     -0.0605         \\
-            &                     &                     &     (0.189)         &     (0.284)         \\
+stepmid     &                     &                     &       1.124         &       1.124         &       1.124         &       1.124         &       1.124         &       1.124         &                     &                     &       1.124         &      -1.107         \\
+            &                     &                     &     (2.878)         &     (2.878)         &     (2.878)         &     (2.878)         &     (2.878)         &     (2.878)         &                     &                     &     (2.878)         &     (3.885)         \\
 [1em]
-zinc        &                     &                     &      0.0321         &     -0.0359         \\
-            &                     &                     &     (0.135)         &     (0.160)         \\
+desmid      &                     &                     &           0         &           0         &           0         &           0         &           0         &           0         &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &                     &                     &         (.)         &         (.)         \\
 [1em]
-oilres      &                     &                     & -0.00000124         &-0.000000946         \\
-            &                     &                     &(0.00000124)         &(0.00000103)         \\
+drystep     &                     &                     &      -0.144         &      -0.144         &      -0.144         &      -0.144         &      -0.144         &      -0.144         &                     &                     &      -0.144         &      -0.164         \\
+            &                     &                     &     (0.116)         &     (0.116)         &     (0.116)         &     (0.116)         &     (0.116)         &     (0.116)         &                     &                     &     (0.116)         &     (0.159)         \\
 [1em]
-legor\_fr    &                     &                     &                     &       0.510         \\
-            &                     &                     &                     &     (1.077)         \\
+hiland      &                     &                     &           0         &           0         &           0         &           0         &           0         &           0         &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &                     &                     &         (.)         &         (.)         \\
 [1em]
-legor\_uk    &                     &                     &                     &       1.214         \\
-            &                     &                     &                     &     (0.968)         \\
+drywint     &                     &                     &       15.48         &       15.48         &       15.48         &       15.48         &       15.48         &       15.48         &                     &                     &       15.48         &      -1.915         \\
+            &                     &                     &     (24.38)         &     (24.38)         &     (24.38)         &     (24.38)         &     (24.38)         &     (24.38)         &                     &                     &     (24.38)         &     (23.61)         \\
 [1em]
-\_cons      &       0.984         &       2.129         &      -6.514         &      -6.843         \\
-            &     (1.150)         &     (1.706)         &     (6.075)         &     (4.149)         \\
+goldm       &                     &                     &      -0.331         &      -0.331         &      -0.331         &      -0.331         &      -0.331         &      -0.331         &                     &                     &      -0.331         &      0.0139         \\
+            &                     &                     &     (0.519)         &     (0.519)         &     (0.519)         &     (0.519)         &     (0.519)         &     (0.519)         &                     &                     &     (0.519)         &     (0.525)         \\
+[1em]
+iron        &                     &                     &      -0.136\sym{**} &      -0.136\sym{**} &      -0.136\sym{**} &      -0.136\sym{**} &      -0.136\sym{**} &      -0.136\sym{**} &                     &                     &      -0.136\sym{**} &      -0.114         \\
+            &                     &                     &    (0.0452)         &    (0.0452)         &    (0.0452)         &    (0.0452)         &    (0.0452)         &    (0.0452)         &                     &                     &    (0.0452)         &    (0.0942)         \\
+[1em]
+silv        &                     &                     &           0         &           0         &           0         &           0         &           0         &           0         &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &                     &                     &         (.)         &         (.)         \\
+[1em]
+zinc        &                     &                     &           0         &           0         &           0         &           0         &           0         &           0         &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &                     &                     &         (.)         &         (.)         \\
+[1em]
+oilres      &                     &                     & -0.00000137         & -0.00000137         & -0.00000137         & -0.00000137         & -0.00000137         & -0.00000137         &                     &                     & -0.00000137         &-0.000000856         \\
+            &                     &                     &(0.000000848)         &(0.000000848)         &(0.000000848)         &(0.000000848)         &(0.000000848)         &(0.000000848)         &                     &                     &(0.000000848)         &(0.000000791)         \\
+[1em]
+legor\_fr    &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &       0.371         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &     (0.974)         \\
+[1em]
+legor\_uk    &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &       1.628\sym{**} \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &                     &     (0.486)         \\
+[1em]
+\_cons      &       0.984         &      -0.581         &      -6.933         &      -9.555\sym{*}  &      -9.555\sym{*}  &      -9.555\sym{*}  &      -9.555\sym{*}  &      -9.555\sym{*}  &       0.984         &       0.139         &      -9.555\sym{*}  &      -18.16\sym{***}\\
+            &     (1.150)         &     (0.351)         &     (4.101)         &     (4.259)         &     (4.259)         &     (4.259)         &     (4.259)         &     (4.259)         &     (1.150)         &     (4.489)         &     (4.259)         &     (2.588)         \\
 \hline
-\(N\)       &          87         &          70         &          53         &          53         \\
-\(R^{2}\)   &       0.154         &       0.435         &       0.756         &       0.810         \\
+\(N\)       &          87         &          70         &          53         &          53         &          53         &          53         &          53         &          53         &          87         &          70         &          53         &          53         \\
+\(R^{2}\)   &       0.154         &       0.511         &       0.793         &       0.793         &       0.793         &       0.793         &       0.793         &       0.793         &       0.154         &       0.511         &       0.793         &       0.837         \\
 \hline\hline
-\multicolumn{5}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{5}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{13}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{13}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
