--- a/Results/Review/Table4.tex
+++ b/Results/Review/Table4.tex
@@ -11,11 +11,11 @@ efw\_colonizer&       0.579\sym{***}&      -0.533\sym{*}  &       0.426\sym{**} 
 america     &           0         &      -0.198\sym{**} &           0         &           0         \\
             &         (.)         &    (0.0586)         &         (.)         &         (.)         \\
 [1em]
-africa      &       0.330         &           0         &      -0.910\sym{**} &      -0.174         \\
-            &     (0.407)         &         (.)         &     (0.366)         &     (0.256)         \\
+africa      &           0         &           0         &      -0.910\sym{**} &      -0.174         \\
+            &         (.)         &         (.)         &     (0.366)         &     (0.256)         \\
 [1em]
-asia        &           0         &       0.175\sym{**} &      -0.609\sym{**} &       0.121         \\
-            &         (.)         &    (0.0361)         &     (0.245)         &     (0.147)         \\
+asia        &      -0.330         &       0.175\sym{**} &      -0.609\sym{**} &       0.121         \\
+            &     (0.407)         &    (0.0361)         &     (0.245)         &     (0.147)         \\
 [1em]
 lat\_abst    &     -0.0192         &       1.722\sym{***}&      -0.453         &      -0.266         \\
             &     (2.476)         &     (0.284)         &     (1.324)         &     (1.230)         \\
@@ -32,8 +32,8 @@ ruggedness  &    0.000770         &    -0.00146\sym{**} &    0.000772         & 
 lpd1500s    &     -0.0448         &      -0.279\sym{***}&      -0.157\sym{**} &      -0.146\sym{**} \\
             &    (0.0900)         &   (0.00792)         &    (0.0430)         &    (0.0459)         \\
 [1em]
-\_cons      &       1.139         &       10.42\sym{***}&       3.742\sym{**} &       2.980\sym{*}  \\
-            &     (0.828)         &     (1.473)         &     (1.449)         &     (1.267)         \\
+\_cons      &       1.469\sym{*}  &       10.42\sym{***}&       3.742\sym{**} &       2.980\sym{*}  \\
+            &     (0.577)         &     (1.473)         &     (1.449)         &     (1.267)         \\
 \hline
 \(N\)       &          40         &          22         &          58         &          63         \\
 \(R^{2}\)   &       0.239         &       0.746         &       0.481         &       0.408         \\
